# learning_rust

./: .gitignore  Cargo.toml  README.md
chp10_type_lifetime/: Cargo.toml
chp10_type_lifetime/src/: main.rs
chp10_type_lifetime/tests/: integration_test.rs
chp12_io_proj/: Cargo.toml
chp12_io_proj/src/: lib.rs  main.rs
chp3_common_concepts/: Cargo.toml
chp3_common_concepts/src/: main.rs
chp6_enum_controlflow/: Cargo.toml
chp6_enum_controlflow/src/: main.rs
chp7_project/: Cargo.toml
chp7_project/src/: lib.rs  main.rs
guessing_game/src/: main.rs
src/ch03-01-variables-and-mutability/: main.rs
src/ch03-02-data-types/: main.rs
src/ch03-03-how-functions-work/: main.rs
src/ch03-05-control-flow/: main.rs
src/ch04-01-what-is-ownership/: Cargo.toml
src/ch04-02-references-and-borrowing/: Cargo.toml
src/ch04-03-slices/: Cargo.toml
src/ch05-01-defining-structs/: Cargo.toml
src/ch05-02-example-structs/: Cargo.toml
src/ch05-03-method-syntax/: Cargo.toml
src/ch06-01-defining-an-enum/: Cargo.toml
src/ch06-02-match/: Cargo.toml
src/ch06-03-if-let/: Cargo.toml
src/ch07-01-packages-and-crates/: Cargo.toml
src/ch07-02-defining-modules-to-control-scope-and-privacy/: Cargo.toml
src/ch07-03-paths-for-referring-to-an-item-in-the-module-tree/: Cargo.toml
src/ch07-04-bringing-paths-into-scope-with-the-use-keyword/: Cargo.toml
src/ch07-05-separating-modules-into-different-files/: Cargo.toml
src/ch08-01-vectors/: Cargo.toml
src/ch08-02-strings/: Cargo.toml
src/ch09-01-unrecoverable-errors-with-panic/: Cargo.toml
src/ch10-02-traits/: Cargo.toml
src/ch10-02-traits/src/: lib.rs  main.rs
src/ch14_cargo/: Cargo.toml
src/ch14_cargo/src/: lib.rs
(+79 files in other folders)
