[package]
name = "ch09-01-unrecoverable-errors-with-panic"
version = "0.1.0"
authors = ["kiorisyshen <kiorisyshen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
# panic = 'abort' // abort instead of crash