[package]
name = "ch10-02-traits"
version = "0.1.0"
authors = ["kiorisyshen <kiorisyshen@gmail.com>"]
edition = "2018"

[lib]
name="test_lib"
path="src/lib.rs"

# [[bin]]
# path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
